# andgein-contest-2026

./: .env.example  .gitignore  README.md  pyproject.toml
brainfuck/: brainfuck.py
bulls_and_cows/: bulls_and_cows.cs  bulls_and_cows.py
eval/: eval.py
lego/: lego.md  lego.py
uneval/: uneval.py
